namespace BuildHub.Models;

public class Contract
{
    
}