namespace BuildHub.Models;

public class EscrowTransaction
{
    
}