namespace BuildHub.Models;

public class Milestone
{
    
}