namespace BuildHub.Models;

public class Project
{
    
}