namespace BuildHub.Models;

public class Quote
{
    
}